force-app/main/default/objects/QuoteLineItem/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>