force-app/main/default/objects/QuoteLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>IF(OR(CASESAFEID(Quote.Opportunity.Pricebook2Id) = &quot;01s5e00000D8P4GAAV&quot;,CASESAFEID(Quote.Opportunity.Pricebook2Id)=&quot;01s5e00000D8P4HAAV&quot;,Quote.Opportunity.Pricebook2Id =&quot;01s5e00000D8P4IAAV&quot;,CASESAFEID(Quote.Opportunity.Pricebook2Id) = &quot;01s5e00000D8P4JAAV&quot;,CASESAFEID(Quote.Opportunity.Pricebook2Id)= &quot;01s5e00000D8P4LAAV&quot;),
((UnitPrice - Product2.AMEA_ICOS__c )/UnitPrice) ,
((UnitPrice - Product2.EMEA_ICOS__c )/ UnitPrice))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>