force-app/main/default/objects/QuoteLineItem/fields/Quote_on_Desired_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_on_Desired_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote on Desired Status</label>
    <type>Checkbox</type>
</CustomField>