force-app/main/default/objects/QuoteLineItem/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <description>SAP Sales Unit</description>
    <label>Sales Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>