force-app/main/default/objects/QuoteLineItem/fields/SAPQuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>SAPQuoteLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that informs that Quote Line Item is from SAP system.</description>
    <label>SAP Quote Line Item</label>
    <type>Checkbox</type>
</CustomField>