force-app/main/default/objects/QuoteLineItem/fields/TECH_Surcharge_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>TECH_Surcharge_Amount_Formula__c</fullName>
    <formula>Quote.Surcharge_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surcharge Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>