force-app/main/default/objects/QuoteLineItem/fields/UM__c.field-meta.xml
<CustomField>
    <fullName>UM__c</fullName>
    <label>U/M</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UM</valueSetName>
    </valueSet>
</CustomField>